[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Materials/Enemy_material.material" type="Material" id=1]
[ext_resource path="res://Assets/Actors/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/Test/Test_Player.obj" type="ArrayMesh" id=3]

[sub_resource type="CylinderShape" id=3]
radius = 1.08347
height = 3.35129

[sub_resource type="CapsuleShape" id=1]
radius = 0.959777
height = 1.61031

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 1.37599, 3 )

[node name="Enemy" type="KinematicBody"]
input_ray_pickable = false
collision_layer = 8
collision_mask = 55
script = ExtResource( 2 )

[node name="CollisionArea" type="Area" parent="."]

[node name="CollisionShape2" type="CollisionShape" parent="CollisionArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.79483, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
mesh = ExtResource( 3 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.79483, 0 )
shape = SubResource( 1 )

[node name="Interaction_Area" type="Area" parent="."]
collision_layer = 8
collision_mask = 49

[node name="CollisionShape2" type="CollisionShape" parent="Interaction_Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.06302, 3 )
shape = SubResource( 2 )
[connection signal="body_entered" from="CollisionArea" to="." method="_on_CollisionArea_body_entered"]
[connection signal="body_entered" from="Interaction_Area" to="." method="_on_Interaction_Area_body_entered"]
[connection signal="body_exited" from="Interaction_Area" to="." method="_on_Interaction_Area_body_exited"]
